updates to the add product user flow

--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -431,6 +431,7 @@ header.govuk-header + .opss-std-row.opss-std-row--borders {
     ul {
       padding: 0;
       width: 100%;
+      float: left;
     }
 
     .opss-pagination-link__wrap {
