--- a/app/views/add-product-v4/reason-for-creating-case.html
+++ b/app/views/add-product-v4/reason-for-creating-case.html
@@ -46,7 +46,7 @@
     },
     {
       value: "issafeoption",
-      text: "To help other market surveillance authorities",
+      text: "The product is safe and compliant",
       hint: {
         classes: "govuk-!-font-size-16",
         text: "The product is safe and compliant but a case will help others avoid testing the same product again."
