--- a/app/views/add-product-v4/select-a-product-barcode.html
+++ b/app/views/add-product-v4/select-a-product-barcode.html
@@ -197,7 +197,7 @@ select-a-product{% extends "layout-01.html" %}
                                 Showing results 1 to 12
                             </li>
                             <li class="opss-pagination-link__wrap opss-pagination-link--next">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">
+                                <a href="select-a-product-barcode-pg2.html" class="govuk-link govuk-link--no-visited-state">
                                     <span>Next</span><span class="govuk-visually-hidden">:</span> <span>Results 13 to 16</span>
                                 </a>
                             </li>
