--- a/app/views/add-product-v4/select-a-product-pg2.html
+++ b/app/views/add-product-v4/select-a-product-pg2.html
@@ -1,7 +1,7 @@
 select-a-product{% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    04. Select a product
+    Select a product
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,20 +13,6 @@ select-a-product{% extends "layout-01.html" %}
 
 
 {% block content %}
-<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
-  <h2 class="govuk-error-summary__title" id="error-summary-title">
-    There is a problem
-  </h2>
-  <div class="govuk-error-summary__body">
-
-    <ul class="govuk-list govuk-error-summary__list">
-      <li>
-        <a href="#product-item-01">Select your product if it appears in the search results</a>
-      </li>
-    </ul>
-  </div>
-</div>
-
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters govuk-!-margin-bottom-7">
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">Select your product</h1>
@@ -42,8 +28,7 @@ select-a-product{% extends "layout-01.html" %}
         <div class="govuk-grid-row">
            <div class="govuk-grid-column-full govuk-!-margin-bottom-1">
                 <p class="govuk-body">
-                   19 products match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>. <span class="govuk-visually-hidden">This page lists results 1 to 12.</span>
-                   <!-- There are no products which match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>. -->
+                   <span id="opss-qty">22</span> products match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>. <span class="govuk-visually-hidden">This page lists results 13 to 22.</span>
                 </p>
            </div>
         </div>
@@ -52,19 +37,15 @@ select-a-product{% extends "layout-01.html" %}
             <div class="govuk-grid-column-full">
 
                 <form action="#" method="post" novalidate>
-                    <div class="govuk-form-group govuk-form-group--error">
-                        <fieldset class="govuk-fieldset" aria-describedby="product-hint product-error">
-
-                            <span id="product-error" class="govuk-error-message">
-                                <span class="govuk-visually-hidden">Error:</span> Select your product if it appears in the search results
-                            </span>
+                    <div class="govuk-form-group">
+                        <fieldset class="govuk-fieldset" aria-describedby="product-hint">
 
                             <ul class="govuk-list govuk-radios govuk-radios--small opss-radio-list opss-radio-list--borders opss-radio-list--no-top-border">
                                 <li>
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-01" name="product-item" type="radio" value="government-gateway" aria-describedby="product-item-01-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-01">
-                                            <span class="opss-radio-list__number">1. </span>Hyper Clean - Series 1000 masks
+                                            <span class="opss-radio-list__number">13. </span>Hyper Clean - Series 1000 masks
                                         </label>
                                         <div id="product-item-01-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Personal protective equipment (PPE), Face covering with UKCA, CE marking.
@@ -75,7 +56,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-02" name="product-item" type="radio" value="government-gateway-02" aria-describedby="product-item-02-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-02">
-                                            <span class="opss-radio-list__number">2. </span>Dyson - Supersonic
+                                            <span class="opss-radio-list__number">14. </span>Dyson - Supersonic
                                         </label>
                                         <div id="product-item-02-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Lorem ipsum (SKKR), electricals with CE marking.
@@ -86,7 +67,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-03" name="product-item" type="radio" value="government-gateway-03" aria-describedby="product-item-03-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-03">
-                                            <span class="opss-radio-list__number">3. </span>Honda - Red Stripe VII
+                                            <span class="opss-radio-list__number">15. </span>Honda - Red Stripe VII
                                         </label>
                                         <div id="product-item-03-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Motor vehicle (PPE), motorbikes, with UKCA, CE, EUXX marking.
@@ -97,7 +78,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-04" name="product-item" type="radio" value="government-gateway-04" aria-describedby="product-item-04-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-04">
-                                            <span class="opss-radio-list__number">4. </span>Panasonic - Super Fast XD
+                                            <span class="opss-radio-list__number">16. </span>Panasonic - Super Fast XD
                                         </label>
                                         <div id="product-item-04-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Electrical equipment (SKKR), Radios with CE marking.
@@ -108,7 +89,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-05" name="product-item" type="radio" value="government-gateway-05" aria-describedby="product-item-05-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-05">
-                                            <span class="opss-radio-list__number">5. </span>Super Hyper Clean - Series 707 mask
+                                            <span class="opss-radio-list__number">17. </span>Super Hyper Clean - Series 707 mask
                                         </label>
                                         <div id="product-item-05-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Personal protective equipment (PPE), Face covering with UKCA, CE marking.
@@ -119,7 +100,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-06" name="product-item" type="radio" value="government-gateway-06" aria-describedby="product-item-06-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-06">
-                                            <span class="opss-radio-list__number">6. </span>Vax - Supersonic 100
+                                            <span class="opss-radio-list__number">18. </span>Vax - Supersonic 100
                                         </label>
                                         <div id="product-item-06-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Lorem ipsum (SKKR), electricals with CE marking.
@@ -130,7 +111,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-07" name="product-item" type="radio" value="government-gateway" aria-describedby="product-item-07-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-07">
-                                            <span class="opss-radio-list__number">7. </span>Super masks - V8000
+                                            <span class="opss-radio-list__number">19. </span>Super masks - V8000
                                         </label>
                                         <div id="product-item-07-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Personal protective equipment (PPE), Face covering with UKCA, CE marking.
@@ -141,7 +122,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-08" name="product-item" type="radio" value="government-gateway-08" aria-describedby="product-item-08-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-08">
-                                            <span class="opss-radio-list__number">8. </span>Sony - superfast
+                                            <span class="opss-radio-list__number">20. </span>Sony - superfast
                                         </label>
                                         <div id="product-item-08-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Lorem ipsumiatica ipsum (SKKR), transport with CE marking.
@@ -152,7 +133,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-09" name="product-item" type="radio" value="government-gateway-09" aria-describedby="product-item-09-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-09">
-                                            <span class="opss-radio-list__number">9. </span>Ford - evergreen mower
+                                            <span class="opss-radio-list__number">21. </span>Ford - evergreen mower
                                         </label>
                                         <div id="product-item-09-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Lawn mower, electrics, with CE, EUXX marking.
@@ -163,32 +144,10 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-10" name="product-item" type="radio" value="government-gateway-10" aria-describedby="product-item-10-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-10">
-                                            <span class="opss-radio-list__number">10. </span>Volvo - safer safes
+                                            <span class="opss-radio-list__number">22. </span>Volvo - safer safes
                                         </label>
                                         <div id="product-item-10-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Hardwear, industrial with CE marking.
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-11" name="product-item" type="radio" value="government-gateway-11" aria-describedby="product-item-11-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-11">
-                                            <span class="opss-radio-list__number">11. </span>Easy ride pram - Series 300
-                                        </label>
-                                        <div id="product-item-11-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Prams and buggies, Child equipment with UKCA, CE marking.
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-12" name="product-item" type="radio" value="government-gateway-12" aria-describedby="product-item-12-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-12">
-                                            <span class="opss-radio-list__number">12. </span>Wilkinson - Gold blade shave
-                                        </label>
-                                        <div id="product-item-12-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Lorem gold ipsum blades, Men's grooming with CE marking.
                                         </div>
                                     </div>
                                 </li>
@@ -199,13 +158,13 @@ select-a-product{% extends "layout-01.html" %}
 
                     <nav class="opss-pagination-link opss-pagination-link--no-top-space">
                         <ul>
-                            <li class="opss-pagination-link__wrap opss-pagination-link--text govuk-body">
-                                Showing results 1 to 12
-                            </li>
-                            <li class="opss-pagination-link__wrap opss-pagination-link--next">
-                                <a href="select-a-product-pg2.html" class="govuk-link govuk-link--no-visited-state">
-                                    <span>Next</span><span class="govuk-visually-hidden">:</span> <span>Results 13 to 19</span>
+                            <li class="opss-pagination-link__wrap opss-pagination-link--prev">
+                                <a href="select-a-product.html" class="govuk-link govuk-link--no-visited-state">
+                                    <span>Previous</span><span class="govuk-visually-hidden">:</span> <span>Results 1 to 12</span>
                                 </a>
+                            </li>
+                            <li class="opss-pagination-link__wrap opss-pagination-link--text govuk-body">
+                                Showing results 13 to 22
                             </li>
                         </ul>
                     </nav>
