--- a/app/views/add-product-v4/select-a-product.html
+++ b/app/views/add-product-v4/select-a-product.html
@@ -28,7 +28,7 @@ select-a-product{% extends "layout-01.html" %}
         <div class="govuk-grid-row">
            <div class="govuk-grid-column-full govuk-!-margin-bottom-1">
                 <p class="govuk-body">
-                   <span id="opss-qty">19</span> products match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>. <span class="govuk-visually-hidden">This page lists results 1 to 12.</span>
+                   <span id="opss-qty">22</span> products match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>. <span class="govuk-visually-hidden">This page lists results 1 to 12.</span>
 
                     <!--
                        There are no products which match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>.
@@ -184,17 +184,12 @@ select-a-product{% extends "layout-01.html" %}
 
                     <nav class="opss-pagination-link opss-pagination-link--no-top-space">
                         <ul>
-                            <!--li class="opss-pagination-link__wrap opss-pagination-link--prev">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">
-                                    <span>Previous</span><span class="govuk-visually-hidden">:</span> <span>Results 1 to 12</span>
-                                </a>
-                            </li-->
                             <li class="opss-pagination-link__wrap opss-pagination-link--text govuk-body">
                                 Showing results 1 to 12
                             </li>
                             <li class="opss-pagination-link__wrap opss-pagination-link--next">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">
-                                    <span>Next</span><span class="govuk-visually-hidden">:</span> <span>Results 13 to 19</span>
+                                <a href="select-a-product-pg2.html" class="govuk-link govuk-link--no-visited-state">
+                                    <span>Next</span><span class="govuk-visually-hidden">:</span> <span>Results 13 to 22</span>
                                 </a>
                             </li>
                         </ul>
