--- a/app/views/add-product-v4/start.html
+++ b/app/views/add-product-v4/start.html
@@ -46,11 +46,13 @@
         <li><a class="govuk-link govuk-link--no-visited-state" href="do-you-have-the-barcode.html">do-you-have-the-barcode</a>
           <ul>
             <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product-barcode.html">select-a-product-barcode</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product-barcode-pg2.html">select-a-product-barcode page 2</a></li>
           </ul>
         </li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="search-for-an-existing-product.html">search-for-an-existing-product</a>
           <ul>
             <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product.html">select-a-product</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="select-a-product-pg2.html">select-a-product page 2</a></li>
           </ul>
         </li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="does-the-product-have-a-brand.html">does-the-product-have-a-brand</a></li>
@@ -66,6 +68,7 @@
         <li><a class="govuk-link govuk-link--no-visited-state" href="can-you-provide-an-image.html">can-you-provide-an-image</a></li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="upload-a-product-image.html">upload-a-product-image</a></li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected.html">how-many-units-are-affected</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected-std.html">how-many-units-are-affected-std</a></li>
       </ol>
 
     </div>
