--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,22 +77,22 @@
       <h3 class="govuk-heading-m">Nanomaterials</h3>
       <p class="govuk-body-s">For these flat HTML files the nav active state is set to the nanomaterials page.</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products.html">Cosmetic products</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html">Nanomaterials</a>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products.html" target="_blank">Cosmetic products</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials.html" target="_blank">Nanomaterials</a>
           <ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details.html">Nanomaterial details</a></li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details.html" target="_blank">Nanomaterial details</a></li>
           </ul>
         </li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html">Responsible person</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/team-members.html">Team members</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-success.html">Cosmetic products - success banner</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html" target="_blank">Responsible person</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/team-members.html" target="_blank">Team members</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-success.html" target="_blank">Cosmetic products - success banner</a></li>
       </ul>
 
       <h3 class="govuk-heading-s">Nanomaterials with account bar</h3>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta.html">Nanomaterials - with account bar</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details-beta.html">Nanomaterial details - with account bar</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta-nobeta.html">Nanomaterial - with account bar &amp; no beta banner</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta.html" target="_blank">Nanomaterials - with account bar</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterial-details-beta.html" target="_blank">Nanomaterial details - with account bar</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/nanomaterials-beta-nobeta.html" target="_blank">Nanomaterial - with account bar &amp; no beta banner</a></li>
       </ul>
 
 
