--- a/app/views/add-product-v4/select-a-product-pg2-error.html
+++ b/app/views/add-product-v4/select-a-product-pg2-error.html
@@ -42,7 +42,7 @@ select-a-product{% extends "layout-01.html" %}
         <div class="govuk-grid-row">
            <div class="govuk-grid-column-full govuk-!-margin-bottom-1">
                 <p class="govuk-body">
-                   19 products match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>. <span class="govuk-visually-hidden">This page lists results 1 to 12.</span>
+                   22 products match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>. <span class="govuk-visually-hidden">This page lists results 13 to 22.</span>
                    <!-- There are no products which match your search keyword(s) <span class="govuk-!-font-weight-bold">Honda, masks, hyper</span>. -->
                 </p>
            </div>
@@ -64,7 +64,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-01" name="product-item" type="radio" value="government-gateway" aria-describedby="product-item-01-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-01">
-                                            <span class="opss-radio-list__number">1. </span>Hyper Clean - Series 1000 masks
+                                            <span class="opss-radio-list__number">13. </span>Hyper Clean - Series 1000 masks
                                         </label>
                                         <div id="product-item-01-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Personal protective equipment (PPE), Face covering with UKCA, CE marking.
@@ -75,7 +75,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-02" name="product-item" type="radio" value="government-gateway-02" aria-describedby="product-item-02-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-02">
-                                            <span class="opss-radio-list__number">2. </span>Dyson - Supersonic
+                                            <span class="opss-radio-list__number">14. </span>Dyson - Supersonic
                                         </label>
                                         <div id="product-item-02-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Lorem ipsum (SKKR), electricals with CE marking.
@@ -86,7 +86,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-03" name="product-item" type="radio" value="government-gateway-03" aria-describedby="product-item-03-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-03">
-                                            <span class="opss-radio-list__number">3. </span>Honda - Red Stripe VII
+                                            <span class="opss-radio-list__number">15. </span>Honda - Red Stripe VII
                                         </label>
                                         <div id="product-item-03-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Motor vehicle (PPE), motorbikes, with UKCA, CE, EUXX marking.
@@ -97,7 +97,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-04" name="product-item" type="radio" value="government-gateway-04" aria-describedby="product-item-04-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-04">
-                                            <span class="opss-radio-list__number">4. </span>Panasonic - Super Fast XD
+                                            <span class="opss-radio-list__number">16. </span>Panasonic - Super Fast XD
                                         </label>
                                         <div id="product-item-04-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Electrical equipment (SKKR), Radios with CE marking.
@@ -108,7 +108,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-05" name="product-item" type="radio" value="government-gateway-05" aria-describedby="product-item-05-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-05">
-                                            <span class="opss-radio-list__number">5. </span>Super Hyper Clean - Series 707 mask
+                                            <span class="opss-radio-list__number">17. </span>Super Hyper Clean - Series 707 mask
                                         </label>
                                         <div id="product-item-05-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Personal protective equipment (PPE), Face covering with UKCA, CE marking.
@@ -119,7 +119,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-06" name="product-item" type="radio" value="government-gateway-06" aria-describedby="product-item-06-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-06">
-                                            <span class="opss-radio-list__number">6. </span>Vax - Supersonic 100
+                                            <span class="opss-radio-list__number">18. </span>Vax - Supersonic 100
                                         </label>
                                         <div id="product-item-06-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Lorem ipsum (SKKR), electricals with CE marking.
@@ -130,7 +130,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-07" name="product-item" type="radio" value="government-gateway" aria-describedby="product-item-07-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-07">
-                                            <span class="opss-radio-list__number">7. </span>Super masks - V8000
+                                            <span class="opss-radio-list__number">19. </span>Super masks - V8000
                                         </label>
                                         <div id="product-item-07-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Personal protective equipment (PPE), Face covering with UKCA, CE marking.
@@ -141,7 +141,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-08" name="product-item" type="radio" value="government-gateway-08" aria-describedby="product-item-08-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-08">
-                                            <span class="opss-radio-list__number">8. </span>Sony - superfast
+                                            <span class="opss-radio-list__number">20. </span>Sony - superfast
                                         </label>
                                         <div id="product-item-08-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Lorem ipsumiatica ipsum (SKKR), transport with CE marking.
@@ -152,7 +152,7 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-09" name="product-item" type="radio" value="government-gateway-09" aria-describedby="product-item-09-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-09">
-                                            <span class="opss-radio-list__number">9. </span>Ford - evergreen mower
+                                            <span class="opss-radio-list__number">21. </span>Ford - evergreen mower
                                         </label>
                                         <div id="product-item-09-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Lawn mower, electrics, with CE, EUXX marking.
@@ -163,32 +163,10 @@ select-a-product{% extends "layout-01.html" %}
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-10" name="product-item" type="radio" value="government-gateway-10" aria-describedby="product-item-10-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-10">
-                                            <span class="opss-radio-list__number">10. </span>Volvo - safer safes
+                                            <span class="opss-radio-list__number">22. </span>Volvo - safer safes
                                         </label>
                                         <div id="product-item-10-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
                                             Hardwear, industrial with CE marking.
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-11" name="product-item" type="radio" value="government-gateway-11" aria-describedby="product-item-11-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-11">
-                                            <span class="opss-radio-list__number">11. </span>Easy ride pram - Series 300
-                                        </label>
-                                        <div id="product-item-11-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Prams and buggies, Child equipment with UKCA, CE marking.
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div  class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="product-item-12" name="product-item" type="radio" value="government-gateway-12" aria-describedby="product-item-12-hint">
-                                        <label class="govuk-label govuk-radios__label" for="product-item-12">
-                                            <span class="opss-radio-list__number">12. </span>Wilkinson - Gold blade shave
-                                        </label>
-                                        <div id="product-item-12-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-bottom-0">
-                                            Lorem gold ipsum blades, Men's grooming with CE marking.
                                         </div>
                                     </div>
                                 </li>
@@ -199,13 +177,13 @@ select-a-product{% extends "layout-01.html" %}
 
                     <nav class="opss-pagination-link opss-pagination-link--no-top-space">
                         <ul>
-                            <li class="opss-pagination-link__wrap opss-pagination-link--text govuk-body">
-                                Showing results 1 to 12
-                            </li>
-                            <li class="opss-pagination-link__wrap opss-pagination-link--next">
-                                <a href="select-a-product-pg2.html" class="govuk-link govuk-link--no-visited-state">
-                                    <span>Next</span><span class="govuk-visually-hidden">:</span> <span>Results 13 to 19</span>
+                            <li class="opss-pagination-link__wrap opss-pagination-link--prev">
+                                <a href="select-a-product.html" class="govuk-link govuk-link--no-visited-state">
+                                    <span>Previous</span><span class="govuk-visually-hidden">:</span> <span>Results 1 to 12</span>
                                 </a>
+                            </li>
+                            <li class="opss-pagination-link__wrap opss-pagination-link--text govuk-body">
+                                Showing results 13 to 22
                             </li>
                         </ul>
                     </nav>
