image upload success pg and pagination fix

--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -119,7 +119,8 @@ ul.opss-radio-list {
     display: block;
     text-align: right;
     border-top: 1px solid govuk-colour("mid-grey", $legacy: "grey-2");
-    padding: govuk-spacing(6) 0;
+    padding: govuk-spacing(6) 0 0 0;
+    @include govuk-clearfix;
 
     ul {
       padding: 0;
