--- a/app/views/add-product-v4/choose-a-product-list-03.html
+++ b/app/views/add-product-v4/choose-a-product-list-03.html
@@ -155,7 +155,7 @@
                 </fieldset>
             </div>
 
-            <div class="govuk-button-group govuk-!-margin-top-6 govuk-!-margin-bottom-6">
+            <div class="govuk-button-group govuk-!-margin-bottom-6">
                 <button class="govuk-button" data-module="govuk-button">
                     Continue
                 </button>
