--- a/app/views/add-product-v4/select-a-product-error.html
+++ b/app/views/add-product-v4/select-a-product-error.html
@@ -210,7 +210,7 @@ select-a-product{% extends "layout-01.html" %}
                         </ul>
                     </nav>
 
-                    <div class="govuk-button-group govuk-!-margin-top-6 govuk-!-margin-bottom-6">
+                    <div class="govuk-button-group govuk-!-margin-bottom-6">
                         <button class="govuk-button" data-module="govuk-button">
                             Continue
                         </button>
