--- a/app/views/add-product-v4/select-a-product-old-error.html
+++ b/app/views/add-product-v4/select-a-product-old-error.html
@@ -153,7 +153,7 @@ select-a-product{% extends "layout-01.html" %}
                 </fieldset>
             </div>
 
-            <div class="govuk-button-group govuk-!-margin-top-6 govuk-!-margin-bottom-6">
+            <div class="govuk-button-group govuk-!-margin-bottom-6">
                 <button class="govuk-button" data-module="govuk-button">
                     Continue
                 </button>
