reverts for improve case selects

--- a/app/views/add-product-v4/start.html
+++ b/app/views/add-product-v4/start.html
@@ -66,7 +66,11 @@
         <li><a class="govuk-link govuk-link--no-visited-state" href="describe-the-product.html">describe-the-product</a></li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="when-was-the-product-placed.html">when-was-the-product-placed</a></li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="can-you-provide-an-image.html">can-you-provide-an-image</a></li>
-        <li><a class="govuk-link govuk-link--no-visited-state" href="upload-a-product-image.html">upload-a-product-image</a></li>
+        <li><a class="govuk-link govuk-link--no-visited-state" href="upload-a-product-image.html">upload-a-product-image</a>
+          <ul>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="upload-a-product-image-success.html">upload-a-product-image-success</a></li>
+          </ul>
+        </li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected.html">how-many-units-are-affected</a></li>
         <li><a class="govuk-link govuk-link--no-visited-state" href="how-many-units-are-affected-std.html">how-many-units-are-affected-std</a></li>
       </ol>
