--- a/app/views/add-product-v4/upload-a-product-image-success.html
+++ b/app/views/add-product-v4/upload-a-product-image-success.html
@@ -22,7 +22,7 @@
   <h3 class="govuk-notification-banner__heading">
     The product image was uploaded
   </h3>
-  <p class="govuk-body">You can now add another.</p>
+  <p class="govuk-body">You can now upload another image.</p>
 {% endset %}
 
 {{ govukNotificationBanner({
