--- a/app/views/case-owner-change-page/improve-case-owner-change-page.html
+++ b/app/views/case-owner-change-page/improve-case-owner-change-page.html
@@ -67,7 +67,7 @@
 
 
 
-        <div class="govuk-radios__divider opss-width-100">Your team</div>
+        <div class="govuk-radios__divider">Your team</div>
 
 
 
@@ -113,7 +113,7 @@
 
 
 
-        <div class="govuk-radios__divider opss-width-100">Other teams added to the case</div>
+        <div class="govuk-radios__divider">Other teams added to the case</div>
 
 
 
@@ -145,7 +145,7 @@
 
 
 
-        <div class="govuk-radios__divider opss-width-100">Other</div>
+        <div class="govuk-radios__divider">Other</div>
 
 
 
