--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -9,7 +9,7 @@ main.govuk-main-wrapper {
     }
 }
 
-.govuk-radios__divider.opss-width-100,
+.govuk-radios__divider .govuk-radios__divider,
 .govuk-radios__divider.opss-radios__divider--title {
     width: 100%;
     text-align: left;
@@ -31,10 +31,6 @@ main.govuk-main-wrapper {
     & > .govuk-radios__divider:first-child {
         margin-top: govuk-spacing(0);
     }
-}
-
-.opss-width-100 {
-    width: 100%;
 }
 
 .opss-borders {
