--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -9,8 +9,7 @@ main.govuk-main-wrapper {
     }
 }
 
-.govuk-radios__divider .govuk-radios__divider,
-.govuk-radios__divider.opss-radios__divider--title {
+.opss-radios__divider--title .govuk-radios__divider {
     width: 100%;
     text-align: left;
     font-weight: 700;
@@ -26,8 +25,7 @@ main.govuk-main-wrapper {
     }*/
 }
 
-.opss-radios__divider--title,
-.govuk-radios__divider.opss-radios__divider--title {
+.opss-radios__divider--title {
     & > .govuk-radios__divider:first-child {
         margin-top: govuk-spacing(0);
     }
